Fixed wildcard support.

--- a/chat/index.html
+++ b/chat/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <title> </title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <body class="bg-white dark-gray pa4 sans-serif debug-grid input-reset">
+  <body class="bg-white dark-gray pa4 sans-serif input-reset">
     <div class="fl w-100 bb db bw2">
       <div class="fl w-80">
         <h1>UpRing-pubsub Testing Application</h1>
