Update chat demo.

--- a/chat/index.html
+++ b/chat/index.html
@@ -10,7 +10,7 @@
         <h3>Publish a message to a channel</h2>
       </div>
       <a href="https://github.com/mcollina/upring-pubsub#readme" target="_blank" class="fl w-20">
-        <img src="https://github.com/mcollina/upring/raw/master/upring.png" class="mw-20" />
+        <img src="/upring.png" class="mw-20" />
       </a>
     </div>
     <script src="/bundle.js"></script>
